# PilotH-AI

./: .gitignore  .pre-commit-config.yaml  AGENT_UPGRADES_SUMMARY.md  ARCHITECTURE_IMPROVEMENTS.md  COMPLETION_SUMMARY.md  Dockerfile  IMPROVEMENTS.md  IMPROVEMENTS_IMPLEMENTED.md  IMPROVEMENTS_SUMMARY.md  INTEGRATION_GUIDE.md  Makefile  QUICK_REFERENCE.md  README.md  VENDOR_AND_COMMUNICATION_IMPROVEMENTS.md  commands.txt  docker-compose.yml  init_project_tables.py  pilot_db.sqlite  pyproject.toml  quick_start.sh  requirements.txt  scratch_diagnose.py  test_api_fixes.py  test_tools.py  verify_improvements.py
Scripts/: deploy.sh  files.py  init_system.py  register_agents.py  register_tools.py  seed_data.py
agents/: agent_card.py  base_agent.py  reflexion_node.py  registry.py
agents/communication/: __init__.py  agent.py  graph.py  query_handler.py  schemas.py
agents/knowledge_base/: __init__.py  agent.py
agents/vendor_management/: __init__.py  agent.py  graph.py  performance_aggregator.py  query_orchestrator.py  schemas.py
backend/api/: dependencies.py  main.py
backend/services/: agent_registry.py  task_queue.py
backend/websocket/: manager.py
chroma_db/: chroma.sqlite3
config/: .env.example  __init__.py  agents.yaml  loader.py  settings.py  tools.yaml
data/conversations/: 015732c7-0ffd-4dcd-8ced-e94ee4194d2c.json  11d50be6-03ad-479a-948b-0fe7438ea7de.json  1feea7d8-c7bd-4fc0-b375-7e607f9750bc.json  36847210-1794-4e0f-a71c-bbc0a9362fed.json  61d66a24-a1ed-4dc1-81a9-0109c9e38675.json  86c3b7d3-3098-4bf2-8d7b-a111c84230e3.json  9142f38b-d2d1-4fb5-8104-32705d738f3f.json  9b6c403e-b8e2-460c-b97f-52359a0a461e.json  a66394ad-1497-4ad9-8b87-996bcfea4f2d.json  b59c0d24-8848-4af3-b790-e6071e535a2b.json  b7cb9d5d-7ddb-4bd3-a619-cd8b02cb1be9.json  ba389d7f-57cc-41f6-b719-551ecccfac72.json  c114c88d-8565-469b-8236-8ee081d1d0dc.json  c43aaee8-e017-406d-ac41-2cae9b557880.json  c934ea64-03bb-405e-b93e-8d5ca65c9172.json  cc60198d-bc07-4c84-8ef3-0083f85468ee.json
frontend/: index.html  package-lock.json  package.json
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
graphs/: __init__.py  conditional_edges.py  orchestration_graph.py  subgraph_loader.py
human_loop/: __init__.py  approval.py  escalation.py  feedback.py  manager.py  ui_components.py
knowledge_base/: __init__.py  document_loader.py  expiry_notifier.py  report_generator.py  simulations.py  vector_store.py
llm/: __init__.py  model_factory.py  token_counter.py
memory/: __init__.py  global_context.py  reflection_store.py  session_store.py
observability/: logger.py  metrics.py  pii_sanitizer.py  tracing.py
orchestrator/: __init__.py  advanced_intent_parser.py  agent_router.py  controller.py  discovery.py  fallback_handler.py  intent_parser.py  memory_manager.py  schemas.py  system_prompts.py  task_decomposer.py  workflow_engine.py
schemas/: __init__.py  agent_io.py  common.py  human_loop.py  memory.py  tool_io.py  user_request.py
scratch/: final_verify.py  reseed_db.py  verify_fallback.py  verify_schema.py  verify_search.py
tests/: test_agent_refactor.py  test_improvements.py  test_lifecycle_tools.py  test_meetings_agent.py  test_vendor_management.py  test_vendor_routing_regressions.py
tools/: base_tool.py  validation.py
(+62 files in other folders)
