[project]
name = "PilotH"
version = "0.1.0"
description = "PilotH is an AI-powered platform for managing vendor relationships, automating procurement, and ensuring compliance."
authors = [
    { name = "Anil Yadav", email = "thekartikanil@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
dev = [
    "ruff",
    "pre-commit"
]

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
exclude = [".git", "__pycache__", "build", "dist", ".venv"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "C90"]
ignore = ["E203", "E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.mccabe]
max-complexity = 10